--- a/index.html
+++ b/index.html
@@ -2,19 +2,35 @@
 <!DOCTYPE html>
 <html class="no-js consumer" lang="en">
   <head>
+
+    <script>
+(function(e, p){
+    var m = location.href.match(/platform=(win8|win|mac|linux|cros)/);
+    e.id = (m && m[1]) ||
+           (p.indexOf('Windows NT 6.2') > -1 ? 'win8' : p.indexOf('Windows') > -1 ? 'win' : p.indexOf('Mac') > -1 ? 'mac' : p.indexOf('CrOS') > -1 ? 'cros' : 'linux');
+    e.className = e.className.replace(/\bno-js\b/,'js');
+  })(document.documentElement, window.navigator.userAgent)
+    </script>
     <meta charset="utf-8">
     <meta content="initial-scale=1, minimum-scale=1, width=device-width" name="viewport">
     <meta content=
-    "Voice Math lets your practice your math facts without having to type in an answer."
+    "Google Chrome is a browser that combines a minimal design with sophisticated technology to make the web faster, safer, and easier."
     name="description">
     <title>
-      Voice Math
+      Chrome Browser
     </title>
     <link href="https://plus.google.com/100585555255542998765" rel="publisher">
     <link href="//www.google.com/images/icons/product/chrome-32.png" rel="icon" type="image/ico">
     <link href="//fonts.googleapis.com/css?family=Open+Sans:300,400,600,700&amp;subset=latin" rel=
     "stylesheet">
+    <link href="/intl/en/chrome/assets/common/css/chrome.min.css" rel="stylesheet">
+    <script src="//www.google.com/js/gweb/analytics/autotrack.js">
 </script>
+    <script>
+new gweb.analytics.AutoTrack({
+          profile: 'UA-26908291-1'
+        });
+    </script>
     <style>
 #info {
     font-size: 20px;
